# opt_tools

./: LICENSE.txt  README.rst  requirements.txt  setup.cfg  test.py
doc/: conf.py  index.rst
doc/api/: index.rst  opt_tools.function.rst  opt_tools.rst  opt_tools.solver.rst  opt_tools.util.rst
doc/general/: install.rst
opt_tools/function/: __init__.py
opt_tools/solver/: __init__.py
opt_tools/util/: __init__.py
